--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <a class="button" href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank"><img src="img/icons/document.png"> License Agreement</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Creative_Commons" target="_blank">Creative Commons</a> 4.1</span></div></div>
 <div class="row">
-<div class="col"><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
+<!-- <div class="col"><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
 <img src="img/buttons/operario.png"></a><br><b>Direction: </b><i>Felipe Ribeiro</i>
 <br><a href="https://bit.do/operarioribeiro-bio" target="_blank">Biography</a> | <a href="https://bit.do/operarioribeiro-resume" target="_blank">Resume</a> | <a href="https://linkedin.com/in/operarioribeiro">LinkedIn</a>
-</div>
+</div> -->
 <div class="col">
 <a href="https://github.com/ecumenic/project" target="_blank">
 <img src="img/buttons/github.png"></a>
