--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 </div> -->
 <div class="col">
 <a href="https://github.com/ecumenic/project" target="_blank">
-<img src="img/buttons/github.png"></a>
+<img src="img/buttons/github.png"></a><br>
 <a class="button" href="https://github.com/ecumenic/project" target="_blank"><img src="img/icons/github.png"> Institutional Methodology</a>
 <br><span><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a> Reliability Repository</span></div></div></div>
 
