--- a/index.html
+++ b/index.html
@@ -208,22 +208,22 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <p><b>Our Foundation Commitments: </b>The Ecumenic Creative Operations Community at 08.02.2019, Opera Day, declares that through the professional ecosystemic path of our founder and its resulting research we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God laic-compliant interfaith crosscultural ecumenic company that could foster a peacebuilding culture sustainability economy development. To respond to the multilevel governance complexity implied in the glocal fair-trade compliant stablishment of a dignified compassionate art respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source operations reliability engineering technologies in our own creative processes searching for an entrepeneurial consentment. The starting Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary interfaith-basement laic-compliant art in accordance to global ethic ecologic regenerative standards charters such as the United Nations Sustainable Development Goals, the UNESCO Cultural Heritage Safegaurd Agenda, and the ICOM Ecomuseology.</p></div>
 <div class="row">
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/README" target="_blank"><img src="img/icons/document.png"> Community Statement</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Readme.md" target="_blank"><img src="img/icons/document.png"> Community Statement</a>
 <br><span>Our Readme File</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/STANDARDS_CHARTERS" target="_blank"><img src="img/icons/document.png"> Standards Compliance</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Compliance.pdf" target="_blank"><img src="img/icons/document.png"> Standards Compliance</a>
 <br><span>Global Laic & Faith-Inspired Charters </span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank"><img src="img/icons/document.png"> Code Of Conduct</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Conduct.pdf" target="_blank"><img src="img/icons/document.png"> Code Of Conduct</a>
 <br><span>Enterprise Ethics</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="_blank"><img src="img/icons/document.png"> Contributions Guidelines</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Collaboration.pdf" target="_blank"><img src="img/icons/document.png"> Collaborations Guidelines</a>
 <br><span>How To Join Us</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRACT" target="_blank"><img src="img/icons/document.png"> Contract Model</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Contract.pdf" target="_blank"><img src="img/icons/document.png"> Contract Model</a>
 <br><span>Juridic Template</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank"><img src="img/icons/document.png"> License Agreement</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20License.pdf" target="_blank"><img src="img/icons/document.png"> License Agreement</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Creative_Commons" target="_blank">Creative Commons</a> 4.1</span></div></div>
 <div class="row">
 <!-- <div class="col"><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
