--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ecumenic Creative Operations</title>
+<title>Ecumenic Times</title>
 <link rel="icon" href="img/favicon.png" sizes="16x16" type="image/png">
 <meta charset="utf-8">
 <meta property="og:image" content="img/header/logo-mobile.png">
@@ -46,10 +46,10 @@
 <div class="header">
 <img class="logo" src="img/header/logo.png">
 <img class="logo-mobile" src="img/header/logo-mobile.png">
-<h1>Ecumenic Creative Operations</h1>
+<h1>Ecumenic Times</h1>
+<h3>Compassionate Sustainable Peacebuilding Inclusive Ethics</h3>
 <h2>Interfaith-Based Laic-Compliant Cultural Development</h2>
-<h3>Compassionate Ethic Sustainable Peacebuilding Inclusive</h3>
-<h3>Collaborative Open-Source Art Studio & Opera Company</h3>
+<h2>Collaborative Open-Source Art Studio & Opera Company</h2>
 <a href="https://ourworldindata.org/sdg-tracker-update">
 <img src="img/header/sdg.png"></a> 
 <a href="https://support.peta.org/page/1763/petition" target="_blank">
@@ -83,14 +83,14 @@
 <h5>
 <a href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/buttons/project.png"></a></h5>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/icons/document.png"> Read The Full Project</a>
+<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/icons/document.png"> Read Our Full Project</a>
 <br><span>Ecumenic Creative Operations Project.pdf</span></div></div></div>
 
 <!-- METHODOLOGY -->
 <div id="methodology" class="container">
 <div class="row">
-<h4>Methodologic Resources</h4>
-<p><b> How We Share Knowledge: </b> Based on our artistic collaborations we use <a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a> articles to develop an educative research under-construction open-source ecumenic ecosystem indicators report, ecomuseologic instructional program, and creativity ecoaesthetic essay.</p>
+<h4>Ecumenic Methodology</h4>
+<p><b> How We Share Knowledge: </b> Based on our cultural collaborations we use <a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a> articles to base our development of open educational resources as our ecumenic creativity laic and faith-inspired ecosystem indicators and data analysis, an ecocuratorship catalog of artworks, an ecomuseologic instructional program, an ecohistoriographic bibliography and dataset, and concearning areas academic essays.</p>
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecosystem.pdf" target="_blank">
 <img src="img/buttons/ecosystem.png"></a>
@@ -111,16 +111,6 @@
 <img src="img/buttons/ecohistoriography.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/document.png"> Ecumenic Ecohistoriography</a>
 <br><span>Laic-Interfaith Historic Taxonomy</span></div>
-<!-- <div class="col">
-<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
-<img src="img/buttons/ecologics.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecologics</a>
-<br><span>Ecocultural Ontology Research</span></div> 
-<div class="col">
-<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
-<img src="img/buttons/ecopoethics.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecopoethics</a>
-<br><span>Ecoaesthetic Treatise</span></div> -->
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
 <img src="img/buttons/articles.png"></a>
@@ -132,8 +122,8 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <!-- PORTFOLIO -->
 <div id="portfolio" class="container">
 <div class="row">
-<h4>Co-Productions Portfolio</h4>
-<p><b>How We Produce Artworks: </b> Using our methodologic resources, specially our ecomuseologic creative program, we valued different communities and cultures creating from social coreographies, cosmopoethic haikus, upcycling sculptures, data-scientific contextual engineering stochastic acusmatic dramaturgic operas, to the Ecumenic Creative Operations itself. Due to its site-specificity the aesthetics of the productions vary widely from lo-fi glitch free-folk to big commercial videomappings.</p>
+<h4>Ecumenic Arts</h4>
+<p><b>How We Produce Cultural Processes and Assets: </b> Using our methodologic resources we value different communities and cultures creating site-specific social coreographies, cosmopoethic haikus, upcycling sculptures, data-scientific contextual engineering stochastic acusmatic dramaturgic operas, to institutional co-creations. Due to its flexibility the aesthetics of the productions vary widely from lo-fi glitch free-folk to arena commercial videomappings.</p>
 <div class="col">
 <a href="http://instagram.com/ecumenictimes" target="_blank">
 <img src="img/buttons/instagram.png"></a>
@@ -144,9 +134,9 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <img src="img/buttons/portfolio.png"></a>
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Portfolio.pdf" target="_blank"><img src="img/icons/document.png"> Selected Portfolio</a>
 <br><span>Artworks Documentation</span></div><div class="col">
-<a href="https:/flickr.com/buttons/ecumenic/albums" target="_blank">
+<a href="https://www.flickr.com/photos/ecumenic/albums" target="_blank">
 <img src="img/buttons/flickr.png"></a>
-<a class="button" href="https:/flickr.com/buttons/ecumenic/albums" target="_blank"><img src="img/icons/flickr.png"> Performances & Visual Arts</a>
+<a class="button" href="https://www.flickr.com/photos/ecumenic/albums" target="_blank"><img src="img/icons/flickr.png"> Performances & Visual Arts</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Flickr" target="_blank">Flickr</a> Photos Galleries</span></div>
 <div class="col">
 <a href="https://ecumenic.bandcamp.com" target="_blank">
@@ -167,8 +157,8 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <!-- MEDIA -->
 <div id="media" class="container">
 <div class="row">
-<h4>Ecumenic Times Media</h4>
-<p><b>How We Communicate: </b> Our laic-compliant channels platform aims at dignified ethic compassionate peacebuilding humanitarian solidary ecosystemic crosscultural regenerativity through interfaith literacy educative programs.</p>
+<h4>Ecumenic Media</h4>
+<p><b>How We Communicate: </b> Our laic-compliant channels platform aims at dignified ethic compassionate peacebuilding humanitarian solidary ecosystemic crosscultural regenerativity through interfaith literacy educational programs.</p>
 <div class="col">
 <a href="https://twitter.com/ecumenictimes" target="_blank">
 <img src="img/buttons/twitter.png"></a>
@@ -204,8 +194,8 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <!-- COMMUNITY -->
 <div id="community" class="container">
 <div class="row">
-<h4>Development Community</h4>
-<p><b>Our Foundation Commitments: </b>The Ecumenic Creative Operations Community at 08.02.2019, Opera Day, declares that through the professional ecosystemic path of our founder and its resulting research we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God laic-compliant interfaith crosscultural ecumenic company that could foster a peacebuilding culture sustainability economy development. To respond to the multilevel governance complexity implied in the glocal fair-trade compliant stablishment of a dignified compassionate art respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source operations reliability engineering technologies in our own creative processes searching for an entrepeneurial consentment. The starting Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary interfaith-basement laic-compliant art in accordance to global ethic ecologic regenerative standards charters such as the United Nations Sustainable Development Goals, the UNESCO Cultural Heritage Safegaurd Agenda, and the ICOM Ecomuseology.</p></div>
+<h4>Ecumenic Enterprise</h4>
+<p><b>Our Foundation Commitments: </b>The Ecumenic Times Community at 08.02.2019, Opera Day, declares that through the professional ecosystemic path of our founder and its resulting research we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God laic-compliant interfaith crosscultural ecumenic company that could foster a peacebuilding culture sustainability economy development. To respond to the multilevel governance complexity implied in the glocal fair-trade compliant stablishment of a dignified compassionate art respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source operations reliability engineering technologies in our own creative processes searching for an entrepeneurial consentment. The starting Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary interfaith-basement laic-compliant art in accordance to global ethic ecologic regenerative standards charters such as the United Nations Sustainable Development Goals, the UNESCO Cultural Heritage Safegaurd Agenda, and the ICOM Ecomuseology.</p></div>
 <div class="row">
 <div class="col">
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Readme.md" target="_blank"><img src="img/icons/document.png"> Community Statement</a>
@@ -215,7 +205,7 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <br><span>Global Laic & Faith-Inspired Charters </span></div>
 <div class="col">
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Conduct.pdf" target="_blank"><img src="img/icons/document.png"> Code Of Conduct</a>
-<br><span>Enterprise Ethics</span></div>
+<br><span>Development Ethics</span></div>
 <div class="col">
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Collaboration.pdf" target="_blank"><img src="img/icons/document.png"> Collaborations Guidelines</a>
 <br><span>How To Join Us</span></div>
