--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <!-- COMMUNITY -->
 <div id="community" class="container">
 <div class="row">
-<h4>Ecumenic Enterprise</h4>
+<h4>Ecumenic Developments</h4>
 <p><b>Our Foundation Commitments: </b>The Ecumenic Times Community at 08.02.2019, Opera Day, declares that through the professional ecosystemic path of our founder and its resulting research we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God laic-compliant interfaith crosscultural ecumenic company that could foster a peacebuilding culture sustainability economy development. To respond to the multilevel governance complexity implied in the glocal fair-trade compliant stablishment of a dignified compassionate art respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source operations reliability engineering technologies in our own creative processes searching for an entrepeneurial consentment. The starting Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary interfaith-basement laic-compliant art in accordance to global ethic ecologic regenerative standards charters such as the United Nations Sustainable Development Goals, the UNESCO Cultural Heritage Safegaurd Agenda, and the ICOM Ecomuseology.</p></div>
 <div class="row">
 <div class="col">
@@ -205,7 +205,7 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <br><span>Global Laic & Faith-Inspired Charters </span></div>
 <div class="col">
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Conduct.pdf" target="_blank"><img src="img/icons/document.png"> Code Of Conduct</a>
-<br><span>Development Ethics</span></div>
+<br><span>Enterprise Ethics</span></div>
 <div class="col">
 <a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Collaboration.pdf" target="_blank"><img src="img/icons/document.png"> Collaborations Guidelines</a>
 <br><span>How To Join Us</span></div>
